--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="mobilesafe.dda.com.activity" >
+    package="mobilesafe.dda.com.activity">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -10,11 +10,11 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/mobileSafe"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".SplashActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme" >
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,18 +23,15 @@
         </activity>
         <activity
             android:name=".HomeActivity"
-            android:label="@string/title_activity_home" >
-        </activity>
+            android:label="@string/title_activity_home"></activity>
         <activity
             android:name=".SettingActivity"
-            android:label="@string/title_activity_setting" >
-        </activity>
-        <activity
-            android:name=".LostFindActivity">
-        </activity>
-        <activity
-            android:name=".Setup1Activity">
-        </activity>
+            android:label="@string/title_activity_setting"></activity>
+        <activity android:name=".LostFindActivity"></activity>
+        <activity android:name=".Setup1Activity"></activity>
+        <activity android:name=".Setup2Activity"></activity>
+        <activity android:name=".Setup3Activity"></activity>
+        <activity android:name=".Setup4Activity"></activity>
     </application>
 
 </manifest>
